scanner implementation & lexical analysis results presentation & demo -> examples renamed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(include)
 set(SOURCES
     src/main.c
     src/files.c
+    src/scanner.c
+    src/utils.c
 )
 
 add_executable(lexicon ${SOURCES})
